--- a/src/defines.h.in
+++ b/src/defines.h.in
@@ -102,6 +102,9 @@
 /* Version number of package */
 #undef VERSION
 
+/* Define to 1 if --with-mysql */
+#undef WITH_MYSQL
+
 /* Define for Solaris 2.5.1 so the uint32_t typedef from <sys/synch.h>,
    <pthread.h>, or <semaphore.h> is not used. If the typedef were allowed, the
    #define below would cause a syntax error. */
