--- a/inotify-sync.conf
+++ b/inotify-sync.conf
@@ -22,16 +22,16 @@ action {
 	action_dir = "@inotify_sync_sync_actiondir@"
 	# Script files' path, will be run when event is notified.
 	# If it is set empty, event will not be notified. Default is empty.
-	access_action = access.py
-	attrib_action = attrib.py
-	close_write_action = close_write.py
-	close_nowrite_action = close_nowrite.py
-	create_action = create.py
-	delete_action = delete.py
-	delete_self_action = delete_self.py
-	modify_action = modify.py
-	move_self_action = move_self.py
-	moved_from_action = moved_from.py
-	moved_to_action = moved_to.py
-	open_action = open.py
+	access_action = "access.py"
+	attrib_action = "attrib.py"
+	close_write_action = "close_write.py"
+	close_nowrite_action = "close_nowrite.py"
+	create_action = "create.py"
+	delete_action = "delete.py"
+	delete_self_action = "delete_self.py"
+	modify_action = "modify.py"
+	move_self_action = "move_self.py"
+	moved_from_action = "moved_from.py"
+	moved_to_action = "moved_to.py"
+	open_action = "open.py"
 }
